feat: support migrations
- support migrating existing resources to operator control via spec 'migrate' field
- add unit tests
- regenerate deepcopy
- fix example manifests to quote policy version (- otherwise, interpreted as timestamp)
- modify log messages for consistency
- update README.md

--- a/manifests/example-resources.yaml
+++ b/manifests/example-resources.yaml
@@ -76,7 +76,7 @@ spec:
   tenantRef:
     namespace: minio-tenant
     name: myminio
-  version: 2012-10-17
+  version: "2012-10-17"
 ---
 apiVersion: bfiola.dev/v1
 kind: MinioPolicyBinding
