fix: use minio operator namespace to assemble CA bundle
- adds minio operator namespace setting as cli argument, env var, and helm chart value
- plumbs minio operator namespace to getMinioTenantClientInfo
- uses minio operator namespace to fetch operator-ca-tls* and external CA secrets
- update README with information

--- a/charts/operator/templates/deployment.yaml
+++ b/charts/operator/templates/deployment.yaml
@@ -37,6 +37,15 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - run
+          env:
+            {{- if .Values.logLevel }}
+            - name: MINIO_OPERATOR_EXT_LOG_LEVEL
+              value: "{{ .Values.logLevel }}"
+            {{- end }}
+            {{- if .Values.minioOperatorNamespace }}
+            - name: MINIO_OPERATOR_EXT_MINIO_OPERATOR_NAMESPACE
+              value: "{{ .Values.minioOperatorNamespace }}"
+            {{- end }}
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
