fix: panic in 'nilToEmpty' helper, reorganize files
- nilToEmpty incorrectly used reflection to obtain a zero value for a given pointer, resulting in a panic
- reconciler implementations have been split out into separate files
- update dev openldap docker image to use docker.io/bitnamilegacy/openldap (note: openldap image no longer supported by bitnami?)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
     "vscode": {
       "extensions": [
         "esbenp.prettier-vscode",
+        "ethan-reesor.exp-vscode-go",
         "golang.go",
         "rohit-gohri.format-code-action",
         "ms-vscode.makefile-tools"
@@ -13,6 +14,8 @@
           "source.formatDocument"
         ],
         "editor.defaultFormatter": "esbenp.prettier-vscode",
+        "exp-vscode-go.testExplorer.enable": true,
+        "go.testExplorer.enable": false,
         "go.testFlags": ["-v", "-count=1"],
         "go.testTimeout": "300s",
         "launch": {
