--- a/dev/manifests/openldap/deployment.yaml
+++ b/dev/manifests/openldap/deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: openldap
     spec:
       containers:
-        - image: docker.io/bitnami/openldap:2.5
+        - image: docker.io/bitnamilegacy/openldap:2.5
           name: openldap
           env:
             - name: LDAP_ADMIN_USERNAME
